# mpojson

./: CMakeLists.txt  README.md  mpojson-config-version.cmake.in  mpojson-config.cmake
ci/: Jenkinsfile  Jenkinsfile.generic  Jenkinsfile.linux  Jenkinsfile.mingw  Jenkinsfile.osxcross
include/mpolib/: mpo_json.h
include/mpolib2/: mpo_json.h
src/: CMakeLists.txt  mpo_json.cpp
tests/: CMakeLists.txt  main.cpp  mpo_test_framework.h  test_headers.cpp  test_headers.h  test_json.cpp
